Some Line Spacing Fixes

--- a/front-end/style.css
+++ b/front-end/style.css
@@ -61,10 +61,8 @@ nav .timer{
 .time {
   display: inline;
   font-size: 16rem;
-  float:left;
   text-shadow: 2px 2px #595959;
 }
-
 
 .past-times{
   right:0;
